--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^10.5.0",
     "node-sass": "^9.0.0",
     "nuxt": "^3.4.0",
+    "nuxt-anchorscroll": "^1.0.3",
     "sass-loader": "^13.3.1",
     "typescript": "^5.0.4",
     "vue": "^3.3.4",
